GA 등록 해보자

--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: Asia/Seoul
 
 title: lumpen # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: 떠돌이 생활을 하는. 실업자는 아니지만, 부랑 생활을 하는 # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -37,7 +37,7 @@ twitter:
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
+  name: lumpen
   email: example@domain.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
