google search console

--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ social:
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
 
-google_site_verification: # fill in to your verification string
+google_site_verification: ijjxfe42T3jNMqfmxPhABfUixbzLugp2DOHPn9w56CI  # fill in to your verification string
 
 # ↑ --------------------------
 # The end of `jekyll-seo-tag` settings
