--- a/_config.yml
+++ b/_config.yml
@@ -90,6 +90,7 @@ comments:
   utterances:
     repo: lumpenop/lumpenop.github.io # <gh-username>/<repo>
     issue_term: pathname  # < url | pathname | title | ...>
+    theme: github-dark
   # Giscus options › https://giscus.app
   giscus:
     repo: # <gh-username>/<repo>
