--- a/_config.yml
+++ b/_config.yml
@@ -76,7 +76,7 @@ theme_mode: dark # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: /Users/macbookair/Desktop/practice/lumpenop.github.io/assets/img/lumpen.jpeg
 
 # boolean type, the global switch for TOC in posts.
 toc: true
