아 _posts 폴더 내부 폴더 구조 되는구나..ㅎㅎ

--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: "https://lumpenop.github.io"
+url: "https://lumpenop.github.io/"
 
 github:
   username: lumpenop # change to your github username
