--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,8 @@ baseurl: ""
 # otherwise, the layout language will use the default value of 'en'.
 lang: en
 
+future: true
+
 # Change to your timezone › https://kevinnovak.github.io/Time-Zone-Picker
 timezone: Asia/Seoul
 
