--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ github:
   username: lumpenop # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: dev.lumpen # change to your twitter username
 
 social:
   # Change to your full name.
